# LazerUp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_system_telemetry.py
apps/api/app/: main.py
apps/api/app/api/v1/: ask.py  bottlenecks.py  founder.py  health.py  investor.py  (+8 more)
apps/api/app/core/: config.py  embeddings.py  llm.py  logging.py
apps/api/app/db/: models.py
apps/api/app/schemas/: __init__.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: analytics.py  founder_fit.py  health.py  linkage.py  markets.py  rag.py  reports.py  search.py  trends.py
apps/api/tests/: test_health.py
apps/worker/: Dockerfile  beat_schedule.py  celery_app.py  celerybeat-schedule  db.py  embeddings.py  llm.py  pyproject.toml  repository.py  telemetry.py
apps/worker/analytics/: __init__.py  bottlenecks.py  mathx.py  metrics.py  opportunities.py  report.py  trends.py  whitespace.py
apps/worker/connectors/: base.py  cache.py
apps/worker/connectors/grants/: nsf.py  sbir.py
apps/worker/connectors/news/: company_rss.py  rss.py
apps/worker/connectors/papers/: arxiv.py  google_scholar.py  semantic_scholar.py
apps/worker/connectors/patents/: google_patents.py  patentsview.py
apps/worker/pipeline/: embed.py  ingest.py  linkage.py  run_analytics.py  run_once.py  source_discovery.py  tag.py
apps/worker/tasks/: __init__.py
apps/worker/tests/: test_analytics_math.py  test_connectors.py  test_embeddings.py  test_pipeline.py
(+19 files in other folders)
