[project]
name = "bos-worker"
version = "0.1.0"
description = "Battery Opportunity Scanner — ingestion & analytics worker"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
